--- a/.github/workflows/youth.yml
+++ b/.github/workflows/youth.yml
@@ -6,7 +6,7 @@ name: 中青看点
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/7 */2 * * *'
+     - cron: '1-25/7 */5 * * *'
   watch:
     types: started
 
@@ -52,4 +52,4 @@ jobs:
           TG_PROXY_HOST: ${{ secrets.TG_PROXY_HOST}}
           TG_PROXY_PORT: ${{ secrets.TG_PROXY_PORT}}
 
-    
+
