--- a/.github/workflows/baiduspeed.yml
+++ b/.github/workflows/baiduspeed.yml
@@ -4,7 +4,7 @@ name: 百度极速版
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/30 * * * *'
+     - cron: '*/25 6-23 * * *'
   watch:
     types: started
 jobs:
